[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/nokia_cellphone/nokia_cellphone_8.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/screens/options/options_screen.gd" type="Script" id=2]
[ext_resource path="res://src/compositional_objects/buttons/options_button/option_button.tscn" type="PackedScene" id=3]

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoOptions" type="Button" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 57.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "VIDEO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOptions" type="Button" parent="."]
margin_left = 72.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "AUDIO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlOptions" type="Button" parent="."]
margin_left = 128.0
margin_top = 8.0
margin_right = 190.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "CONTROLS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 200.0
margin_top = 8.0
margin_right = 303.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "put me back coach"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoSector" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
margin_top = -58.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionOption" parent="VideoSector" instance=ExtResource( 3 )]
margin_left = 24.0
margin_top = 48.0
margin_right = 53.0
margin_bottom = 66.0
new_options = [ "720p", "1080p", "320p" ]

[node name="FullscreenCheck" type="CheckBox" parent="VideoSector"]
margin_left = 16.0
margin_top = 80.0
margin_right = 95.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"

[node name="AudioSector" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
margin_top = -58.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlSector" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
margin_top = -58.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}
